--- a/WebContent/app/styles/login/login.css
+++ b/WebContent/app/styles/login/login.css
@@ -5,7 +5,7 @@ body {
 }
 
 .bg {
-	background-image: url("../../../public/assets/imgs/background.png");
+	background-image: url("../../../public/assets/imgs/background.jpg");
 	height: 100%;
 
 	background-position: center;
